--- a/japon.css
+++ b/japon.css
@@ -12,7 +12,7 @@ body, html {
     font-family: 'Roboto Slab', serif;
     font-family: 'Roboto', sans-serif;
 }
-
+/*****************header*************************************/
 header {
     /* The image used */
     background-image: url("japan_header_bg.jpg");
@@ -39,11 +39,12 @@ header {
 
 .logo {
     width: 176px;
+    padding-top: 5px;
 }
 
 nav {
     width: 500px;
-    background-color: rgba(255, 0, 0, 0.44);
+    /*background-color: rgba(255, 0, 0, 0.44);*/
 }
 
 header ul {
@@ -66,4 +67,39 @@ header a {
     font-size: 32px;
     text-shadow: 1px 1px red;
 }
+/*************************end header***********************/
+
+/**************************section intro japan****************/
+
+.japan-intro-section {
+    width: 100%;
+    background-color: #ffa4c9;
+}
+
+h1 {
+    text-align: center;
+}
+
+.intro-japan {
+    width: 50%;
+    margin: auto;
+    padding-top: 50px;
+    padding-bottom: 50px;
+}
+
+.intro-japan p {
+    text-align: left;
+    padding-top: 38px;
+    font-size: 20px;
+}
+
+/*******************section avec contenu***********************/
+
+.container-visit {
+    display: flex;
+}
+
+
+/************************animation****************************/
+
 
