--- a/css/voyages.css
+++ b/css/voyages.css
@@ -48,6 +48,7 @@ header nav > ul > li > a {
     font-size: 22px;
     font-weight: 600;
     justify-content: center;
+    text-shadow: 0px 3px 3px rgba(0, 0, 0, 0.25);
 }
 
 
