--- a/grèce.css
+++ b/grèce.css
@@ -7,20 +7,23 @@ section {
     width: 100%
 }
 div {
-    border: solid 10px greenyellow;
+    /*border: solid 10px greenyellow;*/
 }
 #fix {
     position: fixed;
     display: flex;
-    background-color: #06A3E6;
+    background-color: #06A3E6A3;
     width: 100%;
     
 }
 ul li {
     display: flex;
     align-items: flex-start;
-    
-
+    background-color: #ffffff7d;
+    text-align: center;
+    align-items: center;
+    padding-top: 9px;
+    border-radius: 30px;
 }
 ul {
     display: flex;
@@ -35,16 +38,20 @@ h1 {
     font-family: "Dyonisius";
     display: flex;
     justify-content: center;
-    border: solid 5px maroon;
+    /*border: solid 5px maroon;*/
     text-align: center;
+    margin-left: 20px;
+    margin-right: 20px;
     
 }
 h2 {
     font-family: "Uncial Antiqua";
     font-style: italic;
-    border: blueviolet solid 5px;
+    /*border: blueviolet solid 5px;*/
     display: flex;
     justify-content: center;
+    margin-left: 20px;
+    margin-right: 20px;
     
 }
 img {
@@ -55,21 +62,23 @@ img {
 a {
     color: black;
     text-decoration: none;
+    width: 200px;
+    height: 30px;
 }
 #img {
     margin: 0;
 }
 p {
-    border: cyan solid 5px;
+    /*border: cyan solid 5px;*/
     /*color: white;*/
-    background-color: #ffffffab;
     font-size: large;
-    margin-bottom: 0%;
+    margin-left: 20px;
+    margin-right: 20px;
 }
 
-/*Diver*/
+/*histoire + culinaire*/
 .grec {
-    border: black solid 5px;
+    /*border: black solid 5px;*/
     width: 60%;
     display: flex;
     flex-direction: column;
@@ -82,15 +91,15 @@ p {
     
 }
 .grec1 {
-    border: solid 5px yellow;
+    /*border: solid 5px yellow;*/
     display: flex;
     flex-direction: column;
     justify-content: center;
     background-color: #06A3E6;
-    box-shadow: 0px -20px 20px 0px #06A3E6;
+    box-shadow: 0px -20px 20px 45px #06A3E6;
 }
 .hist {
-    border: black solid 5px;
+    /*border: black solid 5px;*/
     width: 80%;
     display: flex;
     flex-direction: column;
@@ -99,13 +108,6 @@ p {
     margin-bottom: 55px;
     background-color: #06A3E6;
     color: white;
-    
-}
-#hist {
-
-}
-#culinaire {
-    
 }
 #plat-cuisiné {
     background-image: url(moussaka-grece..jpeg);
@@ -118,7 +120,7 @@ p {
     background-size: cover;
 }
 .cuisine {
-    border: black solid 5px;
+    /*border: black solid 5px;*/
     width: 60%;
     display: flex;
     flex-direction: column;
@@ -127,5 +129,57 @@ p {
     margin-bottom: 25px;
     background-color: white;
     justify-content: center;
-   
+}
+.bloc-opac {
+    background-color: #ffffff7d;
+    font-size: large;
+    margin-bottom: 1%;
+}
+#viande {
+    background-image: url(Souvlaki_1.jpg);
+    background-repeat: no-repeat;
+    background-size: cover;
+}
+#poisson {
+    background-image: url(xifias1.jpg);
+    background-repeat: no-repeat;
+    background-size: cover;
+}
+#vege {
+    background-image: url(yémista.jpg);
+    background-repeat: no-repeat;
+    background-size: cover;
+}
+#patisserie {
+    background-image: url(bouk.jpg);
+    background-repeat: no-repeat;
+    background-size: cover;
+}
+#boisson {
+    background-image: url(retsina1.jpg);
+    background-repeat: no-repeat;
+    background-size: cover;
+}
+#remarque {
+    background-image: url(cafeturc1.jpg);
+    background-repeat: no-repeat;
+    background-size: cover;
+}
+
+/*Les Ies*/
+#iles {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-around;
+}
+.iles {
+    width: 30%;
+    height: 500px;
+    background-color: #06A3E6;
+    color: white;
+    margin-bottom: 20px;
+    margin-top: 20px;
+}
+.img {
+    height: 300px;
 }
