--- a/japon.css
+++ b/japon.css
@@ -13,17 +13,20 @@ body, html {
     font-family: 'Roboto', sans-serif;
 }
 /*****************header*************************************/
-header {
-    /* The image used */
-    background-image: url("japan_header_bg.jpg");
-  
-    /* Full height */
-    height: 100%; 
-  
-    /* Center and scale the image nicely */
+.hero {
+    background-image: url(japan_header_bg.jpg);
+    height: 100%;
     background-position: center;
     background-repeat: no-repeat;
     background-size: cover;
+    /* top: 0; */
+    height: 100vh;
+    padding: 1px;
+}
+
+header {
+    width: 100%;
+    position: absolute;
 }
 
 .header-container {
@@ -62,7 +65,7 @@ header a {
     margin: auto;
     width: 38%;
     background-color: #ffffff80;
-    margin-top: 10%;
+    margin-top: 15%;
     padding: 45px;
     font-size: 32px;
     text-shadow: 1px 1px red;
