added svg button contact

--- a/css/voyages.css
+++ b/css/voyages.css
@@ -47,6 +47,7 @@ header nav > ul > li > a {
     height: 100%;
     font-size: 22px;
     font-weight: 600;
+    letter-spacing: 1px;
     justify-content: center;
     text-shadow: 0px 3px 3px rgba(0, 0, 0, 0.25);
 }
@@ -194,3 +195,53 @@ header nav .sous-menu a {
     width: 100%;
 }
 
+/* Bouton Contact */
+
+.btn-contact {
+    display: flex;
+	align-items: center;
+	justify-content: center;
+	border: 2px solid #FFFFFFA2;
+	border-radius: 4px;
+	cursor: pointer;
+    color: #ddd;
+    height: fit-content;
+    align-self: center;
+    font-weight: 600;
+    margin-left: 5em;
+}
+
+.btn-contact svg {
+    height: 55px;
+    width: 150px;
+    fill: none;
+    stroke-width: 5;
+}
+
+.btn-contact svg .remplissage {
+    stroke: rgba(#E75454, 0.7);
+    fill: #E75454;
+    transition: all 1s ease-in-out;
+}
+
+.btn-contact svg .ligne-animee {
+    stroke: white;
+    stroke-dasharray: 20 420;
+    stroke-dashoffset: 20;
+    transition: all 1s ease-in-out;
+}
+
+.btn-contact:hover svg .remplissage {
+    fill: rgba(0, 0, 0, 0.3);
+}
+
+.btn-contact:hover svg .ligne-animee {
+    stroke-dashoffset: -420;
+}
+
+.btn-contact span {
+    position: absolute;
+    margin: auto 0;
+    text-transform: uppercase;
+    letter-spacing: 2px;
+}
