section slide terminer

--- a/japon.css
+++ b/japon.css
@@ -1,9 +1,10 @@
 @import url('https://fonts.googleapis.com/css2?family=Roboto+Slab:wght@300&family=Roboto:wght@500&display=swap');
-
+@import url('https://fonts.googleapis.com/css2?family=Permanent+Marker&display=swap');
 
 * {
     margin: 0;
     padding: 0;
+    box-sizing: border-box
 }
 
 body, html {
@@ -77,6 +78,8 @@ header a {
 .japan-intro-section {
     width: 100%;
     background-color: #ffa4c9;
+    color: white;
+    text-shadow: red 2px 2px;
 }
 
 h1 {
@@ -171,6 +174,8 @@ h1 {
 .gastronomie {
     height: 100%;
     background-color: #ffa4c9;
+    color: #f7f7f7;
+    text-shadow: red 1px 1px;
 }
 
 .gastronomie h2 {
@@ -208,6 +213,115 @@ h1 {
 .detail-plat {
     width: 368px;
 }
-/************************animation****************************/
+/**********************fin section gastronomie*******************/
+/************************section Slide****************************/
 
+
+.section-slide {
+    background-color: #ffa4c9;
+    padding-top: 1px;
+    color: white;
+}
+
+.section-slide p {
+    font-size: 94px;
+    font-weight: bold;
+    text-align: center;
+    font-family: 'Permanent Marker', cursive;
+    text-shadow: red 6px 3px;
+}
+
+img {
+    max-width:100%;
+    display:block
+}
+
+	
+.slideshow{
+
+margin:5rem auto;
+max-width: 600px;
+aspect-ratio:3/2;
+border: 5px solid hsl(306deg 100% 56% / 34%);
+box-shadow: 0 0 5px hsla(0, 0%, 0%, 0.29);
+overflow: hidden;
+position: relative
+
+	}
+    
+    
+.slideshow img{
+
+height: 100%;
+width: 100%;
+top: 0;
+left: 0;
+position: absolute;
+opacity: 0;
+-webkit-mask-image: linear-gradient(to right,red,red);
+-webkit-mask-repeat: no-repeat;
+-webkit-mask-size: 100% 100%;
+mask-image: linear-gradient(to right,red,red);
+mask-repeat: no-repeat;
+mask-size: 100% 100%;
+animation: slideshow 25s linear infinite
+
+}
+
+
+.slideshow img:nth-child(2){
+	
+	animation-delay: 5s
+		
+	}
+	
+.slideshow img:nth-child(3){
+	
+	animation-delay: 10s
+		
+	}
+	
+.slideshow img:nth-child(4){
+	
+	animation-delay: 15s
+		
+	}
+	
+.slideshow img:nth-child(5){
+	
+	animation-delay: 20s
+	
+	}
+    
+@keyframes slideshow{
+
+0%,100% {
+
+opacity: 0
+
+}
+
+10% {
+
+opacity: 1
+
+}
+20% {
+
+opacity: 1;
+-webkit-mask-position: 200% 0%;
+-webkit-mask-size: 100% 100%;
+mask-position: 200% 0%;
+mask-size: 100% 100%
+
+} 
+
+25%{
+opacity: 0;
+-webkit-mask-size: 0% 100%;
+mask-size: 0% 100%
+
+}
+
+	}	
 
