--- a/japon.css
+++ b/japon.css
@@ -138,7 +138,7 @@ h1 {
 
 .titre-villes {
     margin: auto;
-    width: 5%;
+    width: 8%;
     background-color: #ffffffb8;
     padding: 20px;    
     text-align: center;
@@ -158,12 +158,86 @@ h1 {
 
 
 .kyoto {
+    background-image: url("https://www.kanpai.fr/sites/default/files/uploads/2021/10/kinkaku-ji-19.jpg");
     background-repeat: no-repeat;
     background-size: cover;
     background-attachment: fixed;  
     padding-bottom: 30px;
     padding-bottom: 30px; 
 }
+
+.tokyo {
+    background-image: url("https://ns.clubmed.com/FEAM/Marketing/Omnichannel/SEO/LPOTHERS/VAT-1330/GettyImages-513755057.jpg");
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-attachment: fixed;  
+    padding-bottom: 30px;
+    padding-bottom: 30px;
+}
+
+.mont-fuji {
+    background-image: url("https://koreus.cdn.li/media/201502/128-insolite-07.jpg");
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-attachment: fixed;  
+    padding-bottom: 30px;
+    padding-bottom: 30px
+}
+
+.itsukushima {
+    background-image: url("https://wa-sakura.fr/wp-content/uploads/2020/05/%C3%9C%C3%84%C3%B4%C3%A7%C3%89_%C3%84%C3%B0.jpg");
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-attachment: fixed;  
+    padding-bottom: 30px;
+    padding-bottom: 30px
+}
+
+.shirakawago {
+    background-image: url("https://www.kanpai.fr/sites/default/files/styles/og/public/uploads/2016/11/shirakawago-3.jpg");
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-attachment: fixed;  
+    padding-bottom: 30px;
+    padding-bottom: 30px
+}
+
+.nikko {
+    background-image: url("https://franks-travelbox.com/wp-content/uploads/2017/11/japan-einer-der-kleineren-wasserfacc88lle-im-nikko-nationalpark-in-japan-tamapapat-shutterstock-1200x800.jpg");
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-attachment: fixed;  
+    padding-bottom: 30px;
+    padding-bottom: 30px
+}
+
+.hiroshima {
+    background-image: url("https://i0.wp.com/destinationjapon.fr/wp-content/uploads/2019/09/hiroshima_ville_blog.jpg?fit=1580%2C710&ssl=1");
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-attachment: fixed;  
+    padding-bottom: 30px;
+    padding-bottom: 30px
+}
+
+.okinawa {
+    background-image: url("https://www.ana.co.jp/japan-travel-planner/okinawa/img/hero.jpg");
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-attachment: fixed;  
+    padding-bottom: 30px;
+    padding-bottom: 30px
+}
+
+.nagoya {
+    background-image: url("https://cdn.generationvoyage.fr/2019/02/loger-nagoya-e1550766396823.jpg");
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-attachment: fixed;  
+    padding-bottom: 30px;
+    padding-bottom: 30px
+}
+
 
 .titre-large {
     width: 25%;
