--- a/css/voyages.css
+++ b/css/voyages.css
@@ -1,3 +1,5 @@
+/* ---------- GENERAL ---------- */
+
 * {
     margin: 0;
     padding: 0;
@@ -6,6 +8,11 @@
     font-family: Montserrat, sans-serif;
 }
 
+.centrage {
+    width: 80%;
+    margin-left: auto;
+    margin-right: auto;
+}
 
 /* ------------ HEADER -------------- */
 
@@ -19,9 +26,6 @@ header {
 
 /* Pour centrer l'icône et la nav */
 header .centrage {
-    width: 80%;
-    margin-left: auto;
-    margin-right: auto;
     display: flex;
     justify-content: space-between;
 }
