--- a/css/grèce.css
+++ b/css/grèce.css
@@ -112,12 +112,12 @@ p {
     color: white;
 }
 #plat-cuisiné {
-    background-image: url(moussaka-grece..jpeg);
+    background-image: url(../img/moussaka-grece..jpeg);
     background-repeat: no-repeat;
     background-size: cover;
 }
 #entré {
-    background-image: url(grece-salade.1550284.w630.jpg);
+    background-image: url(../img/grece-salade.1550284.w630.jpg);
     background-repeat: no-repeat;
     background-size: cover;
 }
@@ -138,32 +138,32 @@ p {
     margin-bottom: 1%;
 }
 #viande {
-    background-image: url(Souvlaki_1.jpg);
+    background-image: url(../img/Souvlaki_1.jpg);
     background-repeat: no-repeat;
     background-size: cover;
 }
 #poisson {
-    background-image: url(xifias1.jpg);
+    background-image: url(../img/xifias1.jpg);
     background-repeat: no-repeat;
     background-size: cover;
 }
 #vege {
-    background-image: url(yémista.jpg);
+    background-image: url(../img/yémista.jpg);
     background-repeat: no-repeat;
     background-size: cover;
 }
 #patisserie {
-    background-image: url(bouk.jpg);
+    background-image: url(../img/bouk.jpg);
     background-repeat: no-repeat;
     background-size: cover;
 }
 #boisson {
-    background-image: url(retsina1.jpg);
+    background-image: url(../img/retsina1.jpg);
     background-repeat: no-repeat;
     background-size: cover;
 }
 #remarque {
-    background-image: url(cafeturc1.jpg);
+    background-image: url(../img/cafeturc1.jpg);
     background-repeat: no-repeat;
     background-size: cover;
 }
@@ -181,7 +181,11 @@ p {
     color: white;
     margin-bottom: 20px;
     margin-top: 20px;
+    flex-direction: column;
 }
 .img {
     height: 300px;
+}
+.h1 {
+    justify-content: center;
 }
