--- a/css/france.css
+++ b/css/france.css
@@ -32,9 +32,24 @@ header nav .sous-menu a {
 
 #france-hero {
     height: calc(100vh - 90px);
-    background-color: red;
+    display: flex;
+    align-items: center;
+    background-image: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)), url(../media/img/bg-paris.jpg);
+    color: #ddd;
+}
+
+#france-hero .centrage {
+    width: 60%;
+}
+
+#france-hero h1 {
+    font-size: 65px;
+    padding-bottom: 60px;
+    text-align: center;
 }
 
 #france-hero p {
-    background-color: rgba(120, 100, 100, 0.7);
+    font-size: 25px;
+    text-align: justify;
+    line-height: 1.5em;
 }
