--- a/css/grèce.css
+++ b/css/grèce.css
@@ -3,12 +3,7 @@ body {
     margin: 0;
 }
 section {
-    
     width: 100%
-}
-div {
-    display: flex;
-    /*border: solid 10px greenyellow;*/
 }
 #fix {
     position: fixed;
@@ -17,7 +12,7 @@ div {
     width: 100%;
     
 }
-ul li {
+section ul li {
     display: flex;
     align-items: flex-start;
     background-color: #ffffff7d;
@@ -26,7 +21,7 @@ ul li {
     padding-top: 9px;
     border-radius: 30px;
 }
-ul {
+section ul {
     display: flex;
     align-items: center;
     justify-content: space-around;
@@ -41,8 +36,8 @@ h1 {
     justify-content: center;
     /*border: solid 5px maroon;*/
     text-align: center;
-    margin-left: 20px;
-    margin-right: 20px;
+    padding: 5px;
+    margin-bottom: 10px;
     
 }
 h2 {
@@ -53,14 +48,17 @@ h2 {
     justify-content: center;
     margin-left: 20px;
     margin-right: 20px;
+    padding: 5px;  
+    margin-bottom: 10px;
+    margin-top: 10px;
     
 }
-img {
+section img {
     width: 100%;
     height: 677px;
    
 }
-a {
+section a {
     color: black;
     text-decoration: none;
     width: 200px;
@@ -135,7 +133,7 @@ p {
 .bloc-opac {
     background-color: #ffffff7d;
     font-size: large;
-    margin-bottom: 1%;
+    margin-bottom: 20px;
 }
 #viande {
     background-image: url(../img/Souvlaki_1.jpg);
@@ -188,4 +186,5 @@ p {
 }
 .h1 {
     justify-content: center;
+    margin-top: 13px;
 }
