--- a/css/france.css
+++ b/css/france.css
@@ -42,6 +42,7 @@ header nav .sous-menu a {
     align-items: center;
     background-image: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)), url(../media/img/bg-paris.jpg);
     color: #ddd;
+    cursor: default;
 }
 
 #france-hero .centrage {
