--- a/japon.css
+++ b/japon.css
@@ -51,6 +51,45 @@ nav {
     /*background-color: rgba(255, 0, 0, 0.44);*/
 }
 
+/****************menu déroulant**************************/
+
+.sous-menu {
+    display: flex;
+    flex-direction: column;
+    position: absolute;
+    display: none;
+}
+
+.navbar a {
+    padding: 18px 0;
+    /*border-left: 1px solid #ccc9c9;*/
+    text-decoration: none;
+    /*color: white;*/
+    display: block;
+}
+
+.navbar li {
+    height: auto;
+    width: 135.8px;
+    float: left;
+    text-align: center;
+    list-style: none;
+    font: normal bold 13px/1em Arial, Verdana, Helvetica;
+    padding: 0;
+    margin: 0;
+    /*background-color: #444444;*/
+  }
+
+.navbar li:hover ul {
+    display: block;
+    background-color: rgba(255, 255, 255, 72%);
+    margin-top: 11px;
+    box-shadow: 2px 3px 5px 0px;
+    display: flex;
+  }
+
+
+/***************fin du menu déroulant *****************/
 header ul {
     display: flex;
     justify-content: space-around;
