--- a/css/france.css
+++ b/css/france.css
@@ -10,7 +10,6 @@ header nav li a,
     background-color: #002654;
 }
 
-
 header nav li a:hover {
     color: #002654;
 }
@@ -34,7 +33,10 @@ header nav .sous-menu a {
 }
 
 
-/* Main */
+/* ------------ M A I N -------------- */
+
+
+/* -------- HERO --------- */
 
 #france-hero {
     height: calc(100vh - 90px);
@@ -60,3 +62,47 @@ header nav .sous-menu a {
     text-align: justify;
     line-height: 1.5em;
 }
+
+/* -------- SPECIALITES FRANÇAISES -------- */
+
+#specialites-fr h2, #specialites-fr .specialite {
+    height: 50vh;
+    display: flex;
+}
+
+#specialites-fr h2 {
+    /* background-color: red; */
+    border: 1px solid red;
+    justify-content: center;
+    align-items: center;
+}
+
+#specialites-fr .specialite {
+    border: 1px solid black;
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+}
+
+#specialites-fr .specialite:nth-child(even) {
+    flex-direction: row-reverse;
+    text-align: right;
+    /* background-color: lime; */
+}
+
+#specialites-fr .specialite .contenu-img {
+    width: 40%;
+    height: 80%;
+    display: flex;
+    align-items: center;
+}
+
+#specialites-fr .specialite .contenu-img img {
+    width: 100%;
+    max-height: 100%;
+}
+
+#specialites-fr .specialite .contenu-txt {
+    width: 45%;
+}
+
